--- a/environment1.yml
+++ b/environment1.yml
@@ -3,7 +3,11 @@ channels:
   - conda-forge
   - bioconda
   - defaults
+  - aroth85
 dependencies:
   # TODO nf-core: Add required software dependencies here
   - fastqc=0.11.8
   - multiqc=1.6
+  - samtools
+  - pyclone
+  - r-facets
